--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "canvas": "^2.9.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "image-to-base64": "^2.2.0"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
+    "image-to-base64": "^2.2.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.2.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
