--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "@pinata/sdk": "^1.1.23",
+    "@truffle/hdwallet-provider": "^2.0.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "canvas": "^2.9.0",
@@ -21,6 +24,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "web3": "^1.7.1"
   }
 }
